--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -1,9 +1,9 @@
 #script_fullscreen {
     transition: all .5s ease-in-out;
-    transform: translate(0px,-100%) scale(0,0);
+    transform: translate(0px, -100%) scale(0, 0);
     backdrop-filter: blur(5px);
     border-radius: 0.35em;
-    box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+    box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
     background-color: rgba(230, 230, 230, 0.80);
     border: solid #666 1px;
     position: fixed;
@@ -15,49 +15,57 @@
     width: 70%
 }
 
-    #script_fullscreen h3 {
-        padding: 15px 0px;
-        margin-left: 20px;
-        margin-right: 70px
-    }
+#script_fullscreen h3 {
+    padding: 15px 0px;
+    margin-left: 20px;
+    margin-right: 70px
+}
 
-    #script_fullscreen p {
-        margin: 20px;
-        text-align: justify
-    }
+#script_fullscreen p {
+    margin: 20px;
+    text-align: justify
+}
 
-    #script_fullscreen button.close {
-        box-shadow: inset 0 2.65em 0 -1.85em rgba(255, 255, 255, 0.15);
-        background-color: #ff0000;
-        font-size: larger;
-        font-weight: 900;
-        position: fixed;
-        top: 15px;
-        right: 15px;
-        opacity: 1;
-        min-width: 50px;
-        min-height: 35px;
-        color: #ccc;
-        border-radius: 5px;
-        border: none
-    }
+#script_fullscreen button.close {
+    box-shadow: inset 0 2.65em 0 -1.85em rgba(255, 255, 255, 0.15);
+    background-color: #ff0000;
+    font-size: larger;
+    font-weight: 900;
+    position: fixed;
+    top: 15px;
+    right: 15px;
+    opacity: 1;
+    min-width: 50px;
+    min-height: 35px;
+    color: #ccc;
+    border-radius: 5px;
+    border: none
+}
 
-    #script_fullscreen.open {
-        transform: translate(0px,0px) scale(1,1);
-        opacity: 1
-    }
+#script_fullscreen.open {
+    transform: translate(0px, 0px) scale(1, 1);
+    opacity: 1
+}
 
-    #script_fullscreen .title_row {
-        margin-top: -29px;
-        border-top-right-radius: 0.35em;
-        border-top-left-radius: 0.35em;
-        background-color: rgba(255, 255, 255, 0.70)
-    }
+#script_fullscreen .title_row {
+    margin-top: -29px;
+    border-top-right-radius: 0.35em;
+    border-top-left-radius: 0.35em;
+    background-color: rgba(255, 255, 255, 0.70)
+}
 
-    #script_fullscreen .center {
-        text-align: center
-    }
+#script_fullscreen .footer_row {
+    margin: 20px 0px -19px 0px;
+    padding: 10px 0px;
+    border-bottom-right-radius: 0.35em;
+    border-bottom-left-radius: 0.35em;
+    background-color: rgba(255, 255, 255, 0.70)
+}
 
-        #script_fullscreen .center .btn {
-            padding: 10px 15px
-        }
+#script_fullscreen .center {
+    text-align: center
+}
+
+#script_fullscreen .center .btn {
+    padding: 10px 15px
+}
