--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -56,7 +56,7 @@
 
 #script_fullscreen .footer_row {
     margin: 20px 0px -19px 0px;
-    padding: 10px 0px;
+    padding: 10px;
     border-bottom-right-radius: 0.35em;
     border-bottom-left-radius: 0.35em;
     background-color: rgba(255, 255, 255, 0.70)
