--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,35 @@
-.has-text-align-justify, .is-style-justify, .justify {
+.has-text-align-justify,
+.is-style-justify,
+.justify {
     text-align: justify;
 }
 
+.cookie-settings-btn {
+    z-index: 9999;
+    box-shadow: inset 0 2.65em 0 -1.85em rgba(255, 255, 255, 0.15);
+    background-color: #000;
+    font-size: larger;
+    font-weight: 900;
+    position: fixed;
+    top: 15px;
+    left: 15px;
+    opacity: 1;
+    min-width: 35px;
+    min-height: 35px;
+    color: #ccc;
+    border-radius: 5px;
+    border: none
+}
+
+.cookie-settings-btn:hover {
+    background: #ff0000 !important;
+    color: #fff;
+}
+
+.admin-bar .cookie-settings-btn {
+    top: 39px;
+}
+
+.cookie-settings-btn:hover {
+    background: #000;
+}
