--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,18 +4,29 @@
     text-align: justify;
 }
 
+.cookie-control {
+    position: fixed;
+    top: 5px;
+    left: 5px;
+    z-index: 1000;
+    background: rgba(0, 0, 0, 0.30);
+    padding: 8px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.20);
+    display: inline-flex;
+    align-items: center;
+    gap: 0;
+    transition: gap .2s ease;
+}
+
 .cookie-settings-btn {
-    z-index: 9999;
     box-shadow: inset 0 2.65em 0 -1.85em rgba(255, 255, 255, 0.15);
     background-color: #000;
     font-size: larger;
     font-weight: 900;
-    position: fixed;
-    top: 15px;
-    left: 15px;
     opacity: 1;
-    min-width: 35px;
-    min-height: 35px;
+    min-width: 30px;
+    min-height: 30px;
     color: #ccc;
     border-radius: 5px;
     border: none
@@ -26,8 +37,8 @@
     color: #fff;
 }
 
-.admin-bar .cookie-settings-btn {
-    top: 39px;
+.admin-bar .cookie-control {
+    top: 33px;
 }
 
 .cookie-settings-btn:hover {
